# Regent-AI

./: .gitignore  README.md  docker-compose.yml
ai_engine/: Dockerfile  main.py  pyproject.toml
ai_engine/scripts/: worker.py
backend/: DockerFile  check_db.py  check_legacy_analyses.py  check_muhammad_user.py  check_saad11.py  check_saad_user.py  check_team.py  check_team_final.py  check_user.py  init_plans.py  inspect_analysis.py  inspect_latest.py  list_collections.py  migrate_urls.py  migration_v1.py  pyproject.toml  requirement.txt  seed_cricket_data.py  test_query.py
backend/app/: main.py
backend/app/api/: analysis.py  auth.py  billing.py  chat.py  plan.py  player.py  settings.py  subscription.py  team.py  video.py
backend/app/core/: advisory.py  chat_cleanup.py  cleanup.py  database.py  email.py  repository.py
backend/app/models/: analysis.py  plan.py  player.py  security.py  settings.py  subscription.py  team.py  transaction.py  user.py  video.py
backend/app/scripts/: inspect_db.py  list_models.py  neural_backfill.py
backend/app/utils/: permissions.py  security.py
mobile_app/: App.js  app.json  package-lock.json  package.json
mobile_app/src/: theme.js
mobile_app/src/api/: auth.js
mobile_app/src/components/: Sidebar.js
mobile_app/src/screens/analysis/: VideoAnalysis.js
mobile_app/src/screens/auth/: LoginScreen.js  RegisterScreen.js  TwoFactorScreen.js
mobile_app/src/screens/players/: InitializePlayer.js
mobile_app/src/screens/settings/: SecurityScreen.js
mobile_app/src/screens/teams/: EditPlayerStats.js  ManageTeam.js  SquadChat.js  (+1 more)
(+3 files in other folders)
