[project]
name = "ai-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "mediapipe>=0.10.35",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.27",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.45",
    "uvicorn>=0.46.0",
]
